sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: not found: value i
		for (j<-a-2 to 0) {if (plusPetit(i,i+1)) {echange(i,i+1); b=true }}
                                                 ^AlgCocktailSort1:18: error: not found: value i
		for (j<-a-2 to 0) {if (plusPetit(i,i+1)) {echange(i,i+1); b=true }}
                                                                  ^