sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
/*Faire
  Pour tout i dans [0,lgr-2], faire:
    si i et i+1 doivent être échangées, le faire
  Pour tout i dans [lgr-2,0] en descendant, faire:
    si i et i+1 doivent être échangées, le faire
tant qu'au moins l'un des parcours a inversé un élément*/

def cocktailSort() {

var b=true

	var a=getNombreValeurs()
	while (b==true) {
		b=false	
		
		for (i<-0 to a-2) {if (plusPetit(i+1,i)) {echange(i+1,i); b=true }}
		for (j<-a-2 to 0) {if (plusPetit(i,i+1)) {echange(i,i+1); b=true }}
				
		
		}
		
	}
